--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -51,10 +51,10 @@ spec:
             port: 3000
           initialDelaySeconds: 60
           timeoutSeconds: 15
-#        volumeMounts:
-#          - name: grafana-persistent-storage
-#            mountPath: /var/lib/grafana
-#      volumes:
-#      - name: grafana-persistent-storage
-#        persistentVolumeClaim:
-#          claimName: grafana-persistent-storage
+        volumeMounts:
+          - name: grafana-persistent-storage
+            mountPath: /var/lib/grafana
+      volumes:
+      - name: grafana-persistent-storage
+        persistentVolumeClaim:
+          claimName: grafana-persistent-storage
