--- a/manifests/storage-persistentvolumeclaim.yaml
+++ b/manifests/storage-persistentvolumeclaim.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: grafana-persistent-storage
+  name: $GCE_DISK
   labels:
-    app: grafana-persistent-storage
+    app: $GCE_DISK
 spec:
   accessModes:
     - ReadWriteOnce
